Fix logo fuzziness and spacing

--- a/src/scss/about-us.scss
+++ b/src/scss/about-us.scss
@@ -307,17 +307,24 @@
     #support-panel {
         
         .content-inner {
+            display: block;
+            width: 100%;
+            @include for-768-up {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 100%;
             height: 150px;
+            }
+            
+            
         }
         .img-wrap {
-            width: 100%;
             display: block;
+            max-width: 150px;
+            margin: 3.2rem auto;
             @include for-768-up {
-                width: 33%;
+                max-width: 33%;
+                margin: initial;
             } 
         }
         img {
